[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gateway"
version = "0.1.0"
description = "Unified LLM call surface: OpenRouter/OpenAI chat completions + Claude Code/Codex CLI agents, with one TokenUsage contract (API cost vs subscription cost-equivalent)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roman Fakhrutdinov" }]
requires-python = ">=3.11"
keywords = [
    "llm", "openrouter", "openai", "claude-code", "codex", "token-usage",
    "cost-tracking", "ai-agents", "subprocess", "chat-completion",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "openai",
    "pydantic",
]

[tool.setuptools.packages.find]
include = ["llm_gateway*"]
